Update nb-NO l10n

--- a/nb-NO/suite/chrome/mailnews/messenger.properties
+++ b/nb-NO/suite/chrome/mailnews/messenger.properties
@@ -90,7 +90,8 @@ compactingFolder=Komprimerer mappen %S …
 doneCompacting=Komprimering fullført
 autoCompactAllFoldersTitle=Komprimere mapper
 autoCompactAllFolders=Vil du komprimere alle lokale of frakoblede mapper for å spare diskplass?
-autoCompactAllFoldersCheckbox=Gjør dette automatisk fra nå av.
+autoCompactAlwaysAskCheckbox=Spør meg alltid før mapper komprimeres automatisk
+compactNowButton=Komprimer &nå
 
 confirmFolderDeletionForFilter=Sletting av mappen «%S» vil slå av filtrene som er tilknyttet. Er du sikker på at du vil slette mappen?
 alertFilterChanged=Filtre tilknyttet mappen vil bli oppdatert.
@@ -126,10 +127,10 @@ messageCollapsed=Sammenslått
 
 # Used in the SMTP Account Settings panel when a server value has no properties
 smtpServerList-NotSpecified=<ikke oppgitt>
-smtpServer-SecureConnection-Type_0=Nei
-smtpServer-SecureConnection-Type_1=STARTTLS, dersom tilgjengelig
-smtpServer-SecureConnection-Type_2=STARTTLS
-smtpServer-SecureConnection-Type_3=SMTP-over-SSL
+smtpServer-ConnectionSecurityType-0=Ingen
+smtpServer-ConnectionSecurityType-1=STARTTLS, dersom tilgjengelig
+smtpServer-ConnectionSecurityType-2=STARTTLS
+smtpServer-ConnectionSecurityType-3=SSL/TLS
 smtpServer-SecureAuthentication-Type-false=Nei
 smtpServer-SecureAuthentication-Type-true=Ja
 smtpServers-confirmServerDeletionTitle=Slett tjener
@@ -170,6 +171,7 @@ draftsFolderName=Utkast
 templatesFolderName=Maler
 outboxFolderName=Utboks
 junkFolderName=Uønsket
+archivesFolderName=Arkiv
 
 # Error message for special folder deletion on imap accounts
 # LOCALIZATION NOTE (specialFolderDeletionErr): Do not translate "IMAP" in the line below
@@ -264,7 +266,7 @@ mail.addr_book.displayName.lastnamefirst=false
 # note, changing this might require a change to SearchNameOrEmail.label
 # in messenger.dtd
 #
-# LOCALIZATION NOTES - please add phonetic names as below when "mail.addr_book.show_phonetic_fields" is true
+# LOCALIZATION NOTE - please add phonetic names as below when "mail.addr_book.show_phonetic_fields" is true
 # "?(or(PrimaryEmail,c,@V)(DisplayName,c,@V)(FirstName,c,@V)(LastName,c,@V)(PhoneticFirstName,c,@V)(PhoneticLastName,c,@V))"
 #
 mail.addr_book.quicksearchquery.format=?(or(PrimaryEmail,c,@V)(DisplayName,c,@V)(FirstName,c,@V)(LastName,c,@V))
