--- a/nb-NO/suite/chrome/mailnews/news.properties
+++ b/nb-NO/suite/chrome/mailnews/news.properties
@@ -47,6 +47,8 @@ cancelDisallowed=Denne meldingen ser ikke ut til å være fra deg. Du kan bare a
 cancelConfirm=Er du sikker på at du vil slette denne meldingen?
 messageCancelled=Melding slettet.
 enterUsername=Skriv inn et brukernavn for tilgang til nyhetsgruppetjeneren\:
+enterUsernameTitle=Brukernavn for nyhetsgruppetjener er påkrevd
+saveUsername=Bruk passordbehandling for å huske denne verdien.
 enterPassword=Skriv inn et passord for tilgang til nyhetsgruppetjeneren\:
 enterPasswordTitle=Nyhetsgruppetjeneren krever passord
 okButtonText=Last ned
