--- a/et/toolkit/chrome/mozapps/downloads/unknownContentType.properties
+++ b/et/toolkit/chrome/mozapps/downloads/unknownContentType.properties
@@ -38,7 +38,7 @@
 # ***** END LICENSE BLOCK *****
 
 title=Faili %S avamine
-saveDialogTitle=Sisesta nimi salvestatavale failie...
+saveDialogTitle=Faili salvestamine...
 defaultApp=%S (vaikimisi)
 chooseAppFilePickerTitle=Vali abistav rakendus
 badApp=Rakendust ("%S"), mille valisid, ei leitud.  Kontrolli faili nime või vali mõni muu rakendus.
