--- a/fr/suite/chrome/common/history/places.properties
+++ b/fr/suite/chrome/common/history/places.properties
@@ -1,3 +1,10 @@
+delete.hostname.true=Supprimer l'historique pour %S
+delete.hostname.false=Supprimer l'historique pour ce site
+delete.hostname.accesskey=s
+delete.domain.true=Supprimer l'historique pour *.%S
+delete.domain.false=Supprimer l'historique pour ce domaine
+delete.domain.accesskey=h
+
 load-js-data-url-error=Pour des raisons de sécurité, les URL JavaScript ou les URL de données ne peuvent pas être chargées à partir de la fenêtre d'historique ou de la barre latérale.
 noTitle=(sans titre)
 
