Update nb-NO l10n

--- a/nb-NO/calendar/chrome/calendar/timezones.properties
+++ b/nb-NO/calendar/chrome/calendar/timezones.properties
@@ -55,7 +55,7 @@ pref.timezone.UTC=UTC/GMT
 pref.timezone.Africa.Abidjan=Afrika/Abidjan
 pref.timezone.Africa.Accra=Afrika/Accra
 pref.timezone.Africa.Addis_Ababa=Afrika/Addis Ababa
-pref.timezone.Africa.Algiers=Afrika/Algiers
+pref.timezone.Africa.Algiers=Afrika/Alger
 pref.timezone.Africa.Asmara=Afrika/Asmara
 pref.timezone.Africa.Bamako=Afrika/Bamako
 pref.timezone.Africa.Bangui=Afrika/Bangui
@@ -64,7 +64,7 @@ pref.timezone.Africa.Bissau=Afrika/Bissau
 pref.timezone.Africa.Blantyre=Afrika/Blantyre
 pref.timezone.Africa.Brazzaville=Afrika/Brazzaville
 pref.timezone.Africa.Bujumbura=Afrika/Bujumbura
-pref.timezone.Africa.Cairo=Afrika/Cairo
+pref.timezone.Africa.Cairo=Afrika/Kairo
 pref.timezone.Africa.Casablanca=Afrika/Casablanca
 pref.timezone.Africa.Ceuta=Afrika/Ceuta
 pref.timezone.Africa.Conakry=Afrika/Conakry
@@ -240,7 +240,7 @@ pref.timezone.Antarctica.Mawson=Antarktis/Mawson
 pref.timezone.Antarctica.McMurdo=Antarktis/McMurdo
 pref.timezone.Antarctica.Palmer=Antarktis/Palmer
 pref.timezone.Antarctica.Rothera=Antarktis/Rothera
-pref.timezone.Antarctica.South_Pole=Antarktis/South Pole
+pref.timezone.Antarctica.South_Pole=Antarktis/Sørpolen
 pref.timezone.Antarctica.Syowa=Antarktis/Syowa
 pref.timezone.Antarctica.Vostok=Antarktis/Vostok
 pref.timezone.Arctic.Longyearbyen=Arktis/Longyearbyen
@@ -256,12 +256,12 @@ pref.timezone.Asia.Bahrain=Asia/Bahrain
 pref.timezone.Asia.Baku=Asia/Baku
 pref.timezone.Asia.Bangkok=Asia/Bangkok
 pref.timezone.Asia.Beirut=Asia/Beirut
-pref.timezone.Asia.Bishkek=Asia/Bishkek
+pref.timezone.Asia.Bishkek=Asia/Bisjkek
 pref.timezone.Asia.Brunei=Asia/Brunei
 pref.timezone.Asia.Choibalsan=Asia/Choibalsan
 pref.timezone.Asia.Chongqing=Asia/Chongqing
 pref.timezone.Asia.Colombo=Asia/Colombo
-pref.timezone.Asia.Damascus=Asia/Damascus
+pref.timezone.Asia.Damascus=Asia/Damaskus
 pref.timezone.Asia.Dhaka=Asia/Dhaka
 pref.timezone.Asia.Dili=Asia/Dili
 pref.timezone.Asia.Dubai=Asia/Dubai
@@ -276,11 +276,11 @@ pref.timezone.Asia.Jakarta=Asia/Jakarta
 pref.timezone.Asia.Jayapura=Asia/Jayapura
 pref.timezone.Asia.Jerusalem=Asia/Jerusalem
 pref.timezone.Asia.Kabul=Asia/Kabul
-pref.timezone.Asia.Kamchatka=Asia/Kamchatka
+pref.timezone.Asia.Kamchatka=Asia/Kamtsjatka
 pref.timezone.Asia.Karachi=Asia/Karachi
 pref.timezone.Asia.Kashgar=Asia/Kashgar
 pref.timezone.Asia.Kathmandu=Asia/Katmandu
-pref.timezone.Asia.Krasnoyarsk=Asia/Krasnoyarsk
+pref.timezone.Asia.Krasnoyarsk=Asia/Krasnojarsk
 pref.timezone.Asia.Kuala_Lumpur=Asia/Kuala Lumpur
 pref.timezone.Asia.Kuching=Asia/Kuching
 pref.timezone.Asia.Kuwait=Asia/Kuwait
@@ -289,7 +289,7 @@ pref.timezone.Asia.Magadan=Asia/Magadan
 pref.timezone.Asia.Makassar=Asia/Makassar
 pref.timezone.Asia.Manila=Asia/Manila
 pref.timezone.Asia.Muscat=Asia/Muscat
-pref.timezone.Asia.Nicosia=Asia/Nicosia
+pref.timezone.Asia.Nicosia=Asia/Nikosia
 pref.timezone.Asia.Novosibirsk=Asia/Novosibirsk
 pref.timezone.Asia.Omsk=Asia/Omsk
 pref.timezone.Asia.Oral=Asia/Oral
@@ -308,17 +308,17 @@ pref.timezone.Asia.Singapore=Asia/Singapore
 pref.timezone.Asia.Taipei=Asia/Taipei
 pref.timezone.Asia.Tashkent=Asia/Tashkent
 pref.timezone.Asia.Tbilisi=Asia/Tbilisi
-pref.timezone.Asia.Tehran=Asia/Tehran
+pref.timezone.Asia.Tehran=Asia/Teheran
 pref.timezone.Asia.Thimphu=Asia/Thimphu
 pref.timezone.Asia.Tokyo=Asia/Tokyo
 pref.timezone.Asia.Ulaanbaatar=Asia/Ulaanbaatar
 pref.timezone.Asia.Urumqi=Asia/Urumqi
 pref.timezone.Asia.Vientiane=Asia/Vientiane
 pref.timezone.Asia.Vladivostok=Asia/Vladivostok
-pref.timezone.Asia.Yakutsk=Asia/Yakutsk
-pref.timezone.Asia.Yekaterinburg=Asia/Yekaterinburg
-pref.timezone.Asia.Yerevan=Asia/Yerevan
-pref.timezone.Atlantic.Azores=Atlanterhavet/Azores
+pref.timezone.Asia.Yakutsk=Asia/Jakutsk
+pref.timezone.Asia.Yekaterinburg=Asia/Jekaterinburg
+pref.timezone.Asia.Yerevan=Asia/Jerevan
+pref.timezone.Atlantic.Azores=Atlanterhavet/Azorene
 pref.timezone.Atlantic.Bermuda=Atlanterhavet/Bermuda
 pref.timezone.Atlantic.Canary=Atlanterhavet/Canary
 pref.timezone.Atlantic.Cape_Verde=Atlanterhavet/Cape Verde
@@ -342,12 +342,12 @@ pref.timezone.Australia.Perth=Australia/Perth
 pref.timezone.Australia.Sydney=Australia/Sydney
 pref.timezone.Europe.Amsterdam=Europa/Amsterdam
 pref.timezone.Europe.Andorra=Europa/Andorra
-pref.timezone.Europe.Athens=Europa/Athens
-pref.timezone.Europe.Belgrade=Europa/Belgrade
+pref.timezone.Europe.Athens=Europa/Athen
+pref.timezone.Europe.Belgrade=Europa/Beograd
 pref.timezone.Europe.Berlin=Europa/Berlin
 pref.timezone.Europe.Bratislava=Europa/Bratislava
-pref.timezone.Europe.Brussels=Europa/Brussels
-pref.timezone.Europe.Bucharest=Europa/Bucharest
+pref.timezone.Europe.Brussels=Europa/Brussel
+pref.timezone.Europe.Bucharest=Europa/Bucuresti
 pref.timezone.Europe.Budapest=Europa/Budapest
 pref.timezone.Europe.Chisinau=Europa/Chisinau
 pref.timezone.Europe.Copenhagen=Europa/Copenhagen
@@ -360,7 +360,7 @@ pref.timezone.Europe.Istanbul=Europa/Istanbul
 pref.timezone.Europe.Jersey=Europa/Jersey
 pref.timezone.Europe.Kaliningrad=Europa/Kaliningrad
 pref.timezone.Europe.Kiev=Europa/Kiev
-pref.timezone.Europe.Lisbon=Europa/Lisbon
+pref.timezone.Europe.Lisbon=Europa/Lisboa
 pref.timezone.Europe.Ljubljana=Europa/Ljubljana
 pref.timezone.Europe.London=Europa/London
 pref.timezone.Europe.Luxembourg=Europa/Luxembourg
@@ -369,14 +369,14 @@ pref.timezone.Europe.Malta=Europa/Malta
 pref.timezone.Europe.Mariehamn=Europa/Mariehamn
 pref.timezone.Europe.Minsk=Europa/Minsk
 pref.timezone.Europe.Monaco=Europa/Monaco
-pref.timezone.Europe.Moscow=Europa/Moscow
-pref.timezone.Europe.Nicosia=Europa/Nicosia
+pref.timezone.Europe.Moscow=Europa/Moskva
+pref.timezone.Europe.Nicosia=Europa/Nikosia
 pref.timezone.Europe.Oslo=Europa/Oslo
 pref.timezone.Europe.Paris=Europa/Paris
 pref.timezone.Europe.Podgorica=Europa/Podgorica
-pref.timezone.Europe.Prague=Europa/Prague
+pref.timezone.Europe.Prague=Europa/Praha
 pref.timezone.Europe.Riga=Europa/Riga
-pref.timezone.Europe.Rome=Europa/Rome
+pref.timezone.Europe.Rome=Europa/Roma
 pref.timezone.Europe.Samara=Europa/Samara
 pref.timezone.Europe.San_Marino=Europa/San Marino
 pref.timezone.Europe.Sarajevo=Europa/Sarajevo
