--- a/nb-NO/suite/chrome/common/history/places.properties
+++ b/nb-NO/suite/chrome/common/history/places.properties
@@ -1,3 +1,10 @@
+delete.hostname.true=Slett historikk for %S
+delete.hostname.false=Slett historikk for nettsted
+delete.hostname.accesskey=s
+delete.domain.true=Slett historikk for *.%S
+delete.domain.false=Slett historikk for domene
+delete.domain.accesskey=d
+
 load-js-data-url-error=Av sikkerhetsgrunner kan JavaScript og data-URLer ikke lastes fra historikkvinduet eller sidestolpen.
 noTitle=(ingen tittel)
 
