--- a/nb-NO/mail/installer/custom.properties
+++ b/nb-NO/mail/installer/custom.properties
@@ -56,6 +56,7 @@ CONTEXT_SAFE_MODE=$BrandShortName &Sikker modus
 SAFE_MODE=Sikker modus
 OPTIONS_PAGE_TITLE=Installasjonstype
 OPTIONS_PAGE_SUBTITLE=Velg installasjonsalternativer
+OPTIONS_MAKE_DEFAULT=&Bruk $BrandShortName som standard e-postprogram
 SHORTCUTS_PAGE_TITLE=Lag snarveier
 SHORTCUTS_PAGE_SUBTITLE=Opprett programikoner
 SUMMARY_PAGE_TITLE=Oppsummering
@@ -63,6 +64,7 @@ SUMMARY_PAGE_SUBTITLE=Klart til å installere $BrandShortName
 SUMMARY_INSTALLED_TO=Installerer $BrandShortName til følgende plassering:
 SUMMARY_REBOOT_REQUIRED_INSTALL=En omstart av datamaskinen kan være nødvendig for å fullføre installasjonen.
 SUMMARY_REBOOT_REQUIRED_UNINSTALL=En omstart av datamaskinen kan være nødvendig for å fullføre avinstalleringen.
+SUMMARY_MAKE_DEFAULT=$BrandShortName vil settes som standard e-postprogram.
 SUMMARY_CLICK=Trykk Installer for å fortsette.
 SURVEY_TEXT=F&ortell oss hva du syntes om $BrandShortName
 LAUNCH_TEXT=&Start $BrandFullName nå
