localize an omitted string in pageInfo.properties (suite)

--- a/pl/suite/chrome/browser/pageInfo.properties
+++ b/pl/suite/chrome/browser/pageInfo.properties
@@ -85,7 +85,7 @@ linkStylesheet=Arkusz stylów
 linkRev=Odwrotny odnośnik
 linkX=Prosty odnośnik typu XLink
 linkScript=Skrypt
-linkScriptInline=inline
+linkScriptInline=wewnątrz dokumentu
 
 feedRss=RSS
 feedAtom=Atom
