--- a/pl/suite/chrome/common/history/places.properties
+++ b/pl/suite/chrome/common/history/places.properties
@@ -1,3 +1,10 @@
+delete.hostname.true=Usuń historię dla %S
+delete.hostname.false=Usuń historię dla witryny
+delete.hostname.accesskey=s
+delete.domain.true=Usuń historię dla *.%S
+delete.domain.false=Usuń historię dla domeny
+delete.domain.accesskey=H
+
 load-js-data-url-error=Ze względów bezpieczeństwa adresy URL data: i javascript: nie mogą zostać otwarte z okna historii lub z panelu bocznego.
 noTitle=(brak tytułu)
 
