L10n for: Bug 261882 Import & Export to/from text files (CSV,TAB) fails to include "Screenname" field

--- a/pl/suite/chrome/mailnews/importMsgs.properties
+++ b/pl/suite/chrome/mailnews/importMsgs.properties
@@ -276,9 +276,14 @@
 2134=Informacja 4
 
 # Description: Address book field name
-## @name IMPORT_FIELD_DESC_END
+## @name IMPORT_FIELD_DESC
 ## @loc None
 2135=Notatki
+
+# Description: Address book field name
+## @name IMPORT_FIELD_DESC_END
+## @loc None
+2136=Komunikator AIM
 
 #Error strings
 ImportAlreadyInProgress=Trwa importowanie danych. Spróbuj ponownie, kiedy bieżąca operacja zakończy się.
