l10n for bug 443358 - retention: take over user defaults during install on Win32

--- a/pl/mail/installer/custom.properties
+++ b/pl/mail/installer/custom.properties
@@ -53,6 +53,7 @@ CONTEXT_SAFE_MODE       = $BrandShortName - tryb awaryjny
 SAFE_MODE               = Tryb awaryjny
 OPTIONS_PAGE_TITLE      = Rodzaj instalacji
 OPTIONS_PAGE_SUBTITLE   = Wybierz opcje instalacyjne
+OPTIONS_MAKE_DEFAULT    = &Ustaw program $BrandShortName jako domyślnego klienta poczty
 SHORTCUTS_PAGE_TITLE    = Utwórz skróty
 SHORTCUTS_PAGE_SUBTITLE = Utwórz ikony programu
 SUMMARY_PAGE_TITLE      = Podsumowanie
@@ -60,6 +61,7 @@ SUMMARY_PAGE_SUBTITLE   = Gotowy do rozpoczęcia instalacji programu $BrandShort
 SUMMARY_INSTALLED_TO    = Program $BrandShortName zostanie zainstalowany w następującej lokalizacji:
 SUMMARY_REBOOT_REQUIRED_INSTALL   = Aby dokończyć instalację programu, może być wymagane ponowne uruchomienie komputera.
 SUMMARY_REBOOT_REQUIRED_UNINSTALL = Aby dokończyć dezinstalację programu, może być wymagane ponowne uruchomienie komputera.
+SUMMARY_MAKE_DEFAULT              = Program $BrandShortName zostanie ustawiony jako domyślny klient poczty.
 SUMMARY_CLICK     = Wybierz Instaluj, aby kontynuować.
 SURVEY_TEXT       = &Wyraź swoją opinię na temat programu $BrandShortName
 LAUNCH_TEXT       = &Uruchom teraz program $BrandShortName
