alles van Fennec vertaald

--- a/nl/mobile/chrome/shortcuts.properties
+++ b/nl/mobile/chrome/shortcuts.properties
@@ -1,31 +1,31 @@
-cmd_back.name=Go back
-cmd_forward.name=Go forward
-cmd_reload.name=Reload page
-cmd_stop.name=Stop loading
-cmd_search.name=Search
-cmd_go.name=Load URL
-cmd_openLocation.name=Open location
-cmd_star.name=Star page
-cmd_bookmarks.name=View bookmarks
-cmd_find.name=Find in page
-cmd_findAgain.name=Find again
-cmd_findPrevious.name=Find previous
-cmd_menu.name=Show menu
-cmd_fullscreen.name=Use full screen
-cmd_scrollPageUp.name=Page up
-cmd_scrollToBeginning.name=Scroll to beginning
-cmd_scrollPageDown.name=Page down
-cmd_scrollToEnd.name=Scroll to end
-cmd_cut.name=Cut
-cmd_copy.name=Copy
-cmd_copylink.name=Copy link URL
-cmd_paste.name=Paste
-cmd_delete.name=Delete
-cmd_selectAll.name=Select All
-cmd_newTab.name=Open new tab
-cmd_closeTab.name=Close current tab
-cmd_actions.name=Open Actions list
-cmd_panel.name=Open panel of stuff
-cmd_sanitize.name=Delete all saved personal information
-cmd_zoomin.name=Zoom In
-cmd_zoomout.name=Zoom Out
+cmd_back.name=Terug
+cmd_forward.name=Vooruit
+cmd_reload.name=Pagina vernieuwen
+cmd_stop.name=Stoppen
+cmd_search.name=Zoeken
+cmd_go.name=URL laden
+cmd_openLocation.name=locatie openen
+cmd_star.name=Pagina labelen
+cmd_bookmarks.name=Bladwijzers bekijken
+cmd_find.name=Zoeken in deze pagina
+cmd_findAgain.name=Opnieuw zoeken
+cmd_findPrevious.name=Vorige zoeken
+cmd_menu.name=Menu tonen
+cmd_fullscreen.name=Volledig scherm gebruiken
+cmd_scrollPageUp.name=Pagina omhoog
+cmd_scrollToBeginning.name=Naar het begin scrollen
+cmd_scrollPageDown.name=Pagina omlaag
+cmd_scrollToEnd.name=Naar het einde scrollen
+cmd_cut.name=Knippen
+cmd_copy.name=Kopiëren
+cmd_copylink.name=URL-link kopiëren
+cmd_paste.name=Plakken
+cmd_delete.name=Verwijderen
+cmd_selectAll.name=Alles selecteren
+cmd_newTab.name=Nieuw tabblad openen
+cmd_closeTab.name=Huidige tabblad sluiten
+cmd_actions.name=Actielijst openen
+cmd_panel.name=Paneelmet materiaal openen
+cmd_sanitize.name=Alle opgeslagen privégegevens wissen
+cmd_zoomin.name=inzoomen
+cmd_zoomout.name=Uitzoomen
