--- a/nl/mobile/chrome/search.properties
+++ b/nl/mobile/chrome/search.properties
@@ -1,25 +1,25 @@
-searchtip=Search using %S
+searchtip=Zoeken met %S
 
-cmd_clearHistory=Clear Search History
-cmd_clearHistory_accesskey=C
+cmd_clearHistory=Zoekgeschiedenis wissen
+cmd_clearHistory_accesskey=w
 
-cmd_showSuggestions=Show Suggestions
+cmd_showSuggestions=Suggesties tonen
 cmd_showSuggestions_accesskey=S
 
-addEngineConfirmTitle=Add Search Engine
-addEngineConfirmation=Add "%S" to the list of engines available in the search bar?\n\nFrom: %S
-addEngineUseNowText=Start &using it right away
-addEngineAddButtonLabel=Add
+addEngineConfirmTitle=Zoekmachine toevoegen
+addEngineConfirmation=“%S” toevoegen aan de lijst met beschikbare zoekmachines in de zoekbalk?\n\nVan: %S
+addEngineUseNowText=Meteen gaan gebr&uiken
+addEngineAddButtonLabel=Toevoegen
 
-error_loading_engine_title=Download Error
+error_loading_engine_title=Downloadfout
 # LOCALIZATION NOTE (error_loading_engine_msg2): %1$S = brandShortName, %2$S = location
-error_loading_engine_msg2=%S could not download the search plugin from:\n%S
-error_duplicate_engine_msg=%S could not install the search plugin from "%S" because an engine with the same name already exists.
+error_loading_engine_msg2=%S kon de zoekplug-in niet downloaden vanaf:\n%S
+error_duplicate_engine_msg=%S kon de zoekplug-in niet installeren vanaf “%S” omdat er al een zoekmachine bestaat met dezelfde naam.
 
-error_invalid_engine_title=Install Error
+error_invalid_engine_title=Installatiefout
 # LOCALIZATION NOTE (error_invalid_engine_msg): %S = brandShortName
-error_invalid_engine_msg=This search engine isn't supported by %S and can't be installed.
+error_invalid_engine_msg=Deze zoekmachine wordt niet door %S ondersteund en kan niet worden geïnstalleerd.
 
-cmd_addFoundEngine=Add "%S"
+cmd_addFoundEngine="%S" toevoegen
 
-suggestion_label=Suggestions
+suggestion_label=Suggesties
