--- a/pl/suite/updater/updater.ini
+++ b/pl/suite/updater/updater.ini
@@ -1,4 +1,4 @@
 ; This file is in the UTF-8 encoding
 [Strings]
-Title=Aktualizacja oprogramowania
-Info=SeaMonkey instaluje aktualizacje i uruchomi się za chwilę...
+TitleText=%MOZ_APP_DISPLAYNAME% - Aktualizacja oprogramowania
+InfoText=%MOZ_APP_DISPLAYNAME% instaluje aktualizacje i uruchomi się za chwilę…
