changed mail/chrome/messenger-newsblog/newsblog.properties changed mail/chrome/messenger-region/region.properties changed mail/chrome/messenger/am-offline.dtd changed mail/chrome/messenger/am-server-top.dtd changed mail/chrome/messenger/folderProps.dtd changed mail/chrome/messenger/importDialog.dtd changed mail/chrome/messenger/importMsgs.properties changed mail/chrome/messenger/messenger.dtd changed mail/chrome/messenger/messenger.properties changed mail/chrome/messenger/messengercompose/messengercompose.dtd changed mail/chrome/messenger/msgHdrViewOverlay.dtd changed mail/chrome/messenger/news.properties changed mail/chrome/messenger/preferences/preferences.properties changed mail/chrome/messenger/preferences/privacy.dtd changed mail/chrome/messenger/smtpEditOverlay.dtd

--- a/he/mail/chrome/messenger/importMsgs.properties
+++ b/he/mail/chrome/messenger/importMsgs.properties
@@ -19,7 +19,8 @@
 # the Initial Developer. All Rights Reserved.
 #
 # Contributor(s):
-#   Tomer Cohen <tomerc@gmail.com>
+#     Jeff Beckley <beckley@qualcomm.com>
+#     Tomer Cohen <tomerc@gmail.com>
 #
 # Alternatively, the contents of this file may be used under the terms of
 # either the GNU General Public License Version 2 or later (the "GPL"), or
@@ -34,19 +35,83 @@
 # the terms of any one of the MPL, the GPL or the LGPL.
 #
 # ***** END LICENSE BLOCK *****
+
+# The following are used by the import code to display status/error 
+# and informational messages
+
+# Success message when no address books are found to import
+## @name IMPORT_NO_ADDRBOOKS
+## @loc None
 2000 = לא נמצאו פנקסי כתובות לייבא
+
+# Error: Address book import not intialized		
+## @name IMPORT_ERROR_AB_NOTINITIALIZED
+## @loc None
 2001 = לא ניתן לייבא פנקסי כתובות: שגיאת איתחול.
+
+# Error: Unable to create the import thread
+## @name IMPORT_ERROR_AB_NOTHREAD
+## @loc None
 2002 = לא ניתן לייבא פנקסי כתובות: לא יכול ליצור נושא דיון מיובא.
+
+# Error: Unable to create the import thread
+## @name IMPORT_ERROR_GETABOOK
+## @loc None
+# LOCALIZATION NOTE (Error 2003): Do not translate the word "%S" below.
 2003 = שגיאה ביבוא %S: לא ניתן ליצור פנקס כתובות.
+
+# Success message when no mailboxes are found to import
+## @name IMPORT_NO_MAILBOXES
+## @loc None
 2004 = לא נמצאו תיבות דואר לייבא
+
+# Error: Mailbox import not intialized		
+## @name IMPORT_ERROR_MB_NOTINITIALIZED
+## @loc None
 2005 = לא ניתן לייבא תיבות דואר, שגיאת איתחול
+
+# Error: Unable to create the import thread
+## @name IMPORT_ERROR_MB_NOTHREAD
+## @loc None
 2006 = לא ניתן לייבא תיבות דואר, לא יכול ליצור נושא דיון מיובא
+
+# Error: Unable to create the proxy object for importing mailboxes
+## @name IMPORT_ERROR_MB_NOPROXY
+## @loc None
 2007 = לא ניתן לייבא תיבות דואר, לא יכול ליצור אוביקט שרת מתווך עבור תיבות דואר יעד
+
+# Error: Error creating destination mailboxes
+## @name IMPORT_ERROR_MB_FINDCHILD
+## @loc None
+# LOCALIZATION NOTE (Error 2008): Do not translate the word "%S" below.
+# Place %S in your translation where the name of the mailbox should appear.
 2008 = אירעה שגיאה ביצירת תיבות דואר יעד, לא נמצאה תיבת דואר %S
+
+# Error: Error creating destination mailboxes
+## @name IMPORT_ERROR_MB_CREATE
+## @loc None
+# LOCALIZATION NOTE (Error 2009): Do not translate the word "%S" below.
+# Place %S in your translation where the name of the mailbox should appear.
 2009 = אירעה שגיאה ביבוא תיבת דואר %S, לא ניתן ליצור תיבת דואר יעד
+
+# Error: No destination folder to import mailboxes
+## @name IMPORT_ERROR_MB_NODESTFOLDER
+## @loc None
 2010 = לא ניתן ליצור תיקייה כדי לייבא אליה את הדואר
+
+# Description: Address book field name
+## @name IMPORT_FIELD_DESC_START
+## @loc None
 2100 = שם פרטי
+
+# Description: Address book field name
+## @name IMPORT_FIELD_DESC
+## @loc None
 2101 = שם משפחה
+
+# Description: Address book field name
+## @name IMPORT_FIELD_DESC
+## @loc None
 2102 = שם תצוגה
 2103 = כינוי
 2104 = דוא״ל ראשי
@@ -81,6 +146,11 @@
 2133 = התאמה אישית 3
 2134 = התאמה אישית 4
 2135 = הערות
+
+# Description: Address book field name
+## @name IMPORT_FIELD_DESC_END
+## @loc None
+2136=שם מסך
 
 ImportAlreadyInProgress = תהליך יבוא נמצא כרגע בפעולה. נסה שוב כשתהליך זה יסתיים.
 ImportSettingsBadModule = לא ניתן לטעון מודול הגדרות
