--- a/he/mail/chrome/messenger/news.properties
+++ b/he/mail/chrome/messenger/news.properties
@@ -46,6 +46,8 @@ cancelDisallowed = נראה שההודעה לא ממך. אתה יכול לבטל
 cancelConfirm = האם אתה בטוח שברצונך לבטל הודעה זו?
 messageCancelled = הודעה מבוטלת.
 enterUsername = אנא הכנס שם משתמש עבור גישה לשרת קבוצות דיון:
+saveUsername=השתמש במנהל הסיסמאות כדי לזכור ערך זה.
+enterUsernameTitle=נדרש שם משתמש עבור שרת קבוצות דיון
 enterPassword = אנא הכנס סיסמה עבור גישה לשרת קבוצות דיון
 enterPasswordTitle = דרושה סיסמה לשרת קבוצות דיון
 okButtonText = הורדה
