--- a/he/mail/chrome/messenger/preferences/preferences.properties
+++ b/he/mail/chrome/messenger/preferences/preferences.properties
@@ -6,8 +6,8 @@ domainNameErrorTitle = שגיאת שם מתחם
 domainDuplicationError = שם המתחם %S כבר קיים ברשימות ה־HTML או ברשימות טקסט פשוט.
 confirmResetJunkTrainingTitle = אישור
 confirmResetJunkTrainingText = אתה בטוח שברצונך לאפס את נתוני האימון של המסנן המסתגל?
-setMasterPassword = קבע סיסמה ראשית...
-changeMasterPassword = שינוי סיסמה ראשית...
+### setMasterPassword = קבע סיסמה ראשית...
+### changeMasterPassword = שינוי סיסמה ראשית...
 
 desktopFolderName = שולחן עבודה
 myDownloadsFolderName = ההודעות שלי
