--- a/he/mail/chrome/messenger-newsblog/newsblog.properties
+++ b/he/mail/chrome/messenger-newsblog/newsblog.properties
@@ -10,8 +10,14 @@ subscribe-OPMLExportFileTitle = יצוא OPML של Thunderbird
 subscribe-OPMLExportFileName = MyThunderbirdFeeds.opml
 subscribe-errorInvalidOPMLFile = או ש־%S הוא לא קובץ OPML חוקי או שחלה שגיאה ביבוא הקובץ. 
 subscribe-OPMLExportOPMLFilesFilterText = קבצי OPML
-subsribe-confirmFeedDeletionTitle = הסר הזנת נתונים
-subsribe-confirmFeedDeletion = האם אתה בטוח שברצונך לבטל את ההרשמה שלך להזנת נתונים: \n %S?
+
+#LOCALIZATION NOTE: %S is the name of the feed the user wants to unsubscribe from.
+subscribe-confirmFeedDeletionTitle=הסרת הזנה
+subscribe-confirmFeedDeletion=האם אתה בטוח שבצונך להסיר הרשמה מההזנה: \n %S?
+
+###subsribe-confirmFeedDeletionTitle = הסר הזנת נתונים
+###subsribe-confirmFeedDeletion = האם אתה בטוח שברצונך לבטל את ההרשמה שלך להזנת נתונים: \n %S?
+
 subscribe-fetchingFeedItems = מוריד מאמרי הזנת נתונים (%S מתוך %S)
 newsblog-noNewArticlesForFeed = אין מאמרים חדשים עבור הזנת נתונים זו.
 newsblog-networkError = לא ניתן למצוא את %S. אנא בדוק את השם ונסה שוב.
