--- a/sv-SE/mail/chrome/messenger/activity.properties
+++ b/sv-SE/mail/chrome/messenger/activity.properties
@@ -1,12 +1,5 @@
-# LOCALIZATION NOTE (seconds, minutes, hours, days): Semi-colon list of plural
-# forms. See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-seconds=sekund;sekunder
-minutes=minut;minuter
-hours=timme;timmar
-days=dag;dagar
-
 # Status Text
-paused=Pausad
+paused2=Pausad
 processing=Bearbetar
 notStarted=Ej startad
 failed=Misslyckad
@@ -14,8 +7,6 @@ waitingForInput=Väntar på indata
 waitingForRetry=Väntar på nytt försök
 completed=Avslutad
 canceled=Avbruten
-cannotPause=Den här aktiviteten kan inte pausas
-autoRetry=Försöker igen om %S sekunder
 
 # LOCALIZATION NOTE (yesterday): Displayed time for files finished yesterday
 yesterday=Igår
