Bug 472796 - Updater should use brand name string and not hardcode Seamonkey.

--- a/fr/suite/updater/updater.ini
+++ b/fr/suite/updater/updater.ini
@@ -1,4 +1,5 @@
 ; This file is in the UTF-8 encoding
 [Strings]
-Title=Mise à jour
-Info=SeaMonkey installe les mises à jour et redémarrera dans quelques instants…
+TitleText=Mise à jour de %MOZ_APP_DISPLAYNAME%
+InfoText=%MOZ_APP_DISPLAYNAME% installe les mises à jour et démarrera dans quelques instants…
+
