l10n for bug 476330 - use app name instead of Software Update in updater window title, and replace InfoText with Info in updater.ini using sed in locales Makefile.in

--- a/pl/mail/updater/updater.ini
+++ b/pl/mail/updater/updater.ini
@@ -1,4 +1,4 @@
 ; This file is in the UTF-8 encoding
 [Strings]
-Title=Aktualizacja oprogramowania
+TitleText=%MOZ_APP_DISPLAYNAME% - aktualizacja
 InfoText=%MOZ_APP_DISPLAYNAME% instaluje aktualizacje i uruchomi się za chwilę…
