l10n for follow up to bug 257942, fix some documentation and remove unneeded strings

--- a/pl/mail/chrome/messenger/activity.properties
+++ b/pl/mail/chrome/messenger/activity.properties
@@ -1,10 +1,5 @@
-seconds = sekunda;sekundy;sekund
-minutes = minuta;minuty;minut
-hours   = godzina;godziny;godzin
-days    = dzień;dni;dni
-
 # Status Text
-paused          = Wstrzymano
+paused2         = Wstrzymano
 processing      = Przetwarzanie
 notStarted      = Nie rozpoczęto
 failed          = Niepowiodło się
@@ -12,8 +7,6 @@ waitingForInput = Oczekiwanie
 waitingForRetry = Oczekiwanie na ponowienie
 completed       = Zakończono
 canceled        = Anulowano
-cannotPause     = Tej czynności nie można wstrzymać
-autoRetry       = Ponawianie za %Ss
 
 yesterday = Wczoraj
 monthDate = #2 #1
