removed general*cache

--- a/fy-NL/browser/chrome/browser/pageInfo.properties
+++ b/fy-NL/browser/chrome/browser/pageInfo.properties
@@ -63,11 +63,8 @@ mediaAnimatedImageType=%S Ofbylding (animeard, %S bylden)
 mediaDimensions=%Spx \u00D7 %Spx
 mediaDimensionsScaled=%Spx \u00D7 %Spx (ferskaald ta %Spx \u00D7 %Spx)
 
-generalQuirksMode=Quirks modus
-generalStrictMode=Standert oerienkomstigheid modus
-generalNotCached=(net bufferd)
-generalDiskCache=Skiifbuffer
-generalMemoryCache=Unth\u00E2ldbuffer
+generalQuirksMode=Quirks moadus
+generalStrictMode=Standert oerienkomstigheid moadus
 generalSize=%S KB (%S bytes)
 generalMetaTag=Meta (1 label)
 generalMetaTags=Meta (%S labels)
