--- a/ro/mail/installer/custom.properties
+++ b/ro/mail/installer/custom.properties
@@ -56,6 +56,7 @@ CONTEXT_SAFE_MODE=$BrandShortName în modul &sigur
 SAFE_MODE=Modul sigur
 OPTIONS_PAGE_TITLE=Tip de instalare
 OPTIONS_PAGE_SUBTITLE=Alegeţi opţiunile de instalare
+OPTIONS_MAKE_DEFAULT=&Foloseşte $BrandShortName ca aplicaţie implicită pentru email
 SHORTCUTS_PAGE_TITLE=Creează scurtături
 SHORTCUTS_PAGE_SUBTITLE=Creează iconiţe pentru program
 SUMMARY_PAGE_TITLE=Sumar
@@ -63,6 +64,7 @@ SUMMARY_PAGE_SUBTITLE=Gata de a începe instalarea $BrandShortName
 SUMMARY_INSTALLED_TO=$BrandShortName va fi instalat în:
 SUMMARY_REBOOT_REQUIRED_INSTALL=Ar putea fi necesară o repornire a calculatorului pentru a încheia instalarea.
 SUMMARY_REBOOT_REQUIRED_UNINSTALL=Ar putea fi necesară o repornire a calculatorului pentru a încheia dezinstalarea.
+SUMMARY_MAKE_DEFAULT=$BrandShortName va fi setat ca aplicaţia implicită pentru email.
 SUMMARY_CLICK=Apăsaţi „Instalează” pentru a continua.
 SURVEY_TEXT=&Spuneţi-ne ce credeţi despre ${BrandShortName}
 LAUNCH_TEXT=&Lansează $(^Name) acum
