--- a/ro/mail/updater/updater.ini
+++ b/ro/mail/updater/updater.ini
@@ -1,4 +1,4 @@
 ; This file is in the UTF-8 encoding
 [Strings]
-Title=Actualizare program
+TitleText=Actualizare %MOZ_APP_DISPLAYNAME%
 InfoText=%MOZ_APP_DISPLAYNAME% instalează actualizările şi va porni în câteva momente…
