changed calendar/chrome/calendar/calendar-alarms.properties  changed calendar/chrome/calendar/calendar-event-dialog.dtd  changed calendar/chrome/calendar/calendar-event-dialog.properties  changed calendar/chrome/calendar/dialogs/calendar-event-dialog-reminder.dtd

--- a/he/calendar/chrome/calendar/calendar-event-dialog.properties
+++ b/he/calendar/chrome/calendar/calendar-event-dialog.properties
@@ -21,6 +21,8 @@
 #   Michael Büttner <michael.buettner@sun.com>
 #   Philipp Kewisch <mozilla@kewis.ch>
 #   Hubert Gajewski <hubert@hubertgajewski.com>, Aviary.pl
+#   Martin Schoeder <mschroeder@mozilla.x-home.org>
+#   Tomer Cohen <tomerc@gmail.com>
 #
 # Alternatively, the contents of this file may be used under the terms of
 # either the GNU General Public License Version 2 or later (the "GPL"), or
@@ -36,7 +38,26 @@
 #
 # ***** END LICENSE BLOCK *****
 
+# LOCALIZATION NOTE (dailyEveryNth):
+# Edit recurrence window -> Recurrence pattern -> Daily repeat rules
+# #1 - number
+# e.g. "every 4 days"
+dailyEveryNth=בכל יום;בכל #1 ימים
 repeatDetailsRuleDaily1=בכל יום
+
+# LOCALIZATION NOTE (weeklyNthOn)
+# Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
+# %1$S - weekday (one or more)
+# #2 - week interval
+# e.g. "every 3 weeks on Tuesday, Wednesday and Thursday
+weeklyNthOn=בכל %1$S;בכל #2 שבועות ב%1$S
+
+# LOCALIZATION NOTE (weeklEveryNth)
+# Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
+# #1 - interval
+# e.g. "every 5 weeks"
+weeklyEveryNth=כל שבוע;כל #1 שבועות
+
 repeatDetailsRuleDaily2=יום כן ויום לא
 repeatDetailsRuleDaily3=בכל %1$S ימים
 repeatDetailsRuleDaily4=כל יום חול בשבוע
@@ -55,7 +76,41 @@ repeatDetailsDay4=רביעי
 repeatDetailsDay5=חמישי
 repeatDetailsDay6=שישי
 repeatDetailsDay7=שבת
+
+# LOCALIZATION NOTE (repeatDetailsAnd)
+# Used to show a number of weekdays in a list
+# i.e. "Sunday, Monday, Tuesday " + and + " Wednesday"
 repeatDetailsAnd=וגם
+
+# LOCALIZATION NOTE (monthlyNthOfEvery):
+# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# %1$S - ordinal
+# %2$S - weekday
+# #3 - interval
+# i.e. "the FIRST MONDAY of every 3 months"
+monthlyNthOfEvery=%2$S %1$S בכל חודש;%2$S %1$S  בכל #3 חודשים
+
+# LOCALIZATION NOTE (monthlyEveryOfEvery):
+# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# %1$S - weekday
+# #2 - interval
+# i.e. "every MONDAY of every 3 months" 
+#  more specific: every monday of January, April, July, October
+monthlyEveryOfEvery=כל יום %1$S בכל חודש;כל יום %1$S בכל #2 חודשים
+
+# LOCALIZATION NOTE (monthlyDayOfNth):
+# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# %1$S - day of month
+# #2 - month interval
+# e.g. "day 3 of every 2 months"
+monthlyDayOfNth=יום %1$S בכל חודש;יום %1$S בכל #2 חודשים
+
+# LOCALIZATION NOTE (monthlyLastDayOfNth):
+# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# %1$S - day of month
+# #2 - month interval
+# e.g. "the last day of every 3 months"
+monthlyLastDayOfNth=בכל יום אחרון בחודש;כל יום אחרון בכל #1 חודשים
 
 repeatDetailsRuleMonthly=ב%1$S %2$S של כל חודש
 repeatDetailsRuleMonthly2=ב%1$S %2$S של כל חודש שני
