fixed several wrong words in browserfiles for consistency

--- a/fy-NL/browser/chrome/browser/places/places.properties
+++ b/fy-NL/browser/chrome/browser/places/places.properties
@@ -17,23 +17,23 @@ bookmarksMenuEmptyFolder=(Leech)
 # en-US value if you have to use non-ascii characters.
 bookmarksBackupFilename=Bl\u00EAdwizers %1$S.html
 bookmarksBackupFilenameJSON=Bl\u00EAdwizers %S.json
-bookmarksBackupTitle=Bl\u00EAdwizers reservekopie bet\u00E2nsnamme
+bookmarksBackupTitle=Bl\u00EAdwizers reservekopy bet\u00E2nsnamme
 
 bookmarksRestoreAlertTitle=Bl\u00EAdwizers Tebeksette
-bookmarksRestoreAlert=Al jo aktuele bl\u00EAdwizers sille ferfongen wurde mei die fan de reservekopie. Witte jo it seker?
-bookmarksRestoreAlertTags=Al jo aktuele bl\u00EAdwizers en labels sille ferfongen wurde troch de reservekopie. Witte jo it seker?
-bookmarksRestoreTitle=Selektearje in bl\u00EAdwizers reservekopie
+bookmarksRestoreAlert=Al jo aktuele bl\u00EAdwizers sille ferfongen wurde mei die fan de reservekopy. Witte jo it seker?
+bookmarksRestoreAlertTags=Al jo aktuele bl\u00EAdwizers en labels sille ferfongen wurde troch de reservekopy. Witte jo it seker?
+bookmarksRestoreTitle=Selektearje in bl\u00EAdwizers reservekopy
 bookmarksRestoreFilterName=JSON
 bookmarksRestoreFilterExtension=*.json
 
 bookmarksRestoreFormatError=Net stipe best\u00E2nstype.
-bookmarksRestoreParseError=Net yn steat de reservekopie te ferwurkjen.
+bookmarksRestoreParseError=Net yn steat de reservekopy te ferwurkjen.
 
 bookmarksLivemarkLoading=Live bl\u00EAdwizer oan it laden...
 bookmarksLivemarkFailed=Laden fan live-bl\u00EAdwizerfeed mislearre.
 
 headerTextPrefix1=Toant
-headerTextPrefix2=Sykrisseltaten foar 
+headerTextPrefix2=Sykresultaten foar 
 headerTextPrefix3=Avanseard sykje
 
 lessCriteria.label=-
