--- a/fy-NL/browser/installer/override.properties
+++ b/fy-NL/browser/installer/override.properties
@@ -93,8 +93,8 @@ CouldNotLoad="Koe net lade: "
 CreateFolder="Meitsje Map: "
 CreateShortcut="Meitsje programma-ikoantsjes: "
 CreatedUninstaller="De-ynstallearder makke: "
-Delete="Smit bestân fuort: "
-DeleteOnReboot="Smit fuort by it op 'e nij opstarten: "
+Delete="Smyt bestân fuort: "
+DeleteOnReboot="Smyt fuort by it op 'e nij opstarten: "
 ErrorCreatingShortcut="Flater mei oanmeitsjen programma-ikoantsje: "
 ErrorCreating="Flater mei it meitsjen fan: "
 ErrorDecompressing=Flater mei útpakken gegevens! Korruptearre ynstallearder?
